login text overflow (fixes#144) (#211)
when using Japanese
   * fixed welcome to symbol
   * fixed login text

  when using Chinese
   * fixed the login button position

  fix login profile list (#206)

--- a/src/views/pages/accounts/LoginPage.less
+++ b/src/views/pages/accounts/LoginPage.less
@@ -36,8 +36,8 @@
   }
 
   .welcome-box {
-    width: 1200px;
-    height: 539px;
+    width: 12rem;
+    height: 5.39rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -48,39 +48,37 @@
     align-items: center;
 
     .banner-image {
-      height: 620px;
-      width: 800px;
+      height: 6.2rem;
+      width: 8rem;
       background: linear-gradient(121deg, rgba(82, 0, 198, 1) 0%, rgba(78, 0, 167, 1) 100%);
       color: @white;
-      padding: 30px 40px;
+      padding: 0.3rem 0.4rem;
 
       .top-welcome-text {
         display: block;
-        font-size: 70px;
-        width: 75%;
+        font-size: 0.7rem;
         font-weight: bolder;
-        margin-top: 108px;
-        padding-left: 37px;
-        height: 85px;
-        line-height: 85px;
+        margin-top: 1.08rem;
+        padding-left: 0.37rem;
+        height: 0.85rem;
+        line-height: 0.85rem;
       }
 
       .top-to-symbol-text {
         display: block;
-        font-size: 70px;
-        width: 75%;
+        font-size: 0.7rem;
         font-weight: bolder;
-        padding-left: 37px;
-        height: 85px;
-        line-height: 85px;
+        padding-left: 0.37rem;
+        height: 0.85rem;
+        line-height: 0.85rem;
       }
 
       .bottom-welcome-text {
-        padding-top: 28px;
-        padding-left: 37px;
+        padding-top: 0.28rem;
+        padding-left: 0.37rem;
         font-size: @biggerFont;
-        line-height: 50px;
-        width: 730px;
+        line-height: 0.5rem;
+        width: 7.3rem;
       }
     }
 
@@ -88,12 +86,12 @@
 
   .login-card {
     float: right;
-    width: 420px;
-    height: 620px;
-    padding-left: 21px;
-    padding-top: 40px;
+    width: 4.2rem;
+    height: 6.2rem;
+    padding-left: 0.21rem;
+    padding-top: 0.4rem;
     background-color: @white;
-    margin-right: 5px;
+    margin-right: 0.05rem;
     position: relative;
 
     .ivu-select {
@@ -118,21 +116,21 @@
     }
 
     .img-box {
-      height: 265px;
-      height: 72px;
-      margin-bottom: 50px;
+      height: 2.65rem;
+      height: 0.72rem;
+      margin-bottom: 0.5rem;
       background-repeat: no-repeat;
-      background-size: 265px 72px;
+      background-size: 2.65rem 0.72rem;
       color: red;
       background-position: 0 center;
       background-image: url("../../resources/symbol_logo.png");
     }
 
     .login-title {
-      font-size: 42px;
+      font-size: 0.4rem;
       font-weight: 400;
       @black: rgba(51, 51, 51, 1);
-      margin-bottom: 30px;
+      margin-bottom: 0.3rem;
     }
 
     .ivu-tooltip {
@@ -141,20 +139,20 @@
 
     input {
       width: 90%;
-      height: 37px;
+      height: 0.37rem;
       background: @white;
       border: none;
       border-bottom: 1px solid @border;
-      padding-left: 11px;
+      padding-left: 0.11rem;
       font-size: @normalFont;
       border-radius: 0;
-      margin-top: 10px;
-      padding-bottom: 5px;
+      margin-top: 0.1rem;
+      padding-bottom: 0.05rem;
     }
 
     .account-name,
     .input-password {
-      font-size: 22px;
+      font-size: 0.22rem;
       font-weight: 400;
       color: @grayDark;
     }
@@ -164,11 +162,11 @@
     }
 
     .account-name {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
 
     .input-password {
-      margin-top: 22px;
+      margin-top: 0.22rem;
     }
 
     input::-webkit-input-placeholder {
@@ -176,14 +174,14 @@
     }
 
     .password-tip {
-      margin-top: 20px;
+      padding-top: 0.2rem;
       width: 90%;
       font-size: @smallerFont;
       font-weight: 400;
       color: @purple;
-      line-height: 17px;
+      line-height: 0.17rem;
       display: flex;
-
+      min-height: 0.56rem;
       .prompt {
         width: 100%;
         background-color: transparent;
@@ -198,19 +196,19 @@
     }
 
     .button {
-      width: 343px;
-      height: 58px;
-      font-size: 28px;
-      margin-top: 50px;
-      line-height: 40px;
-      border-radius: 10px;
+      width: 3.43rem;
+      height: 0.58rem;
+      font-size: 0.28rem;
+      margin-top: 0.5rem;
+      line-height: 0.4rem;
+      border-radius: 0.1rem;
     }
   }
 
   .switch-language-container {
-    width: 100px;
+    width: 1rem;
     float: right;
-    margin: 35px 0;
+    margin: 0.35rem 0;
   }
 
   .ivu-select-selection {
@@ -236,13 +234,13 @@
 
   .button {
     background: @purpleLight;
-    border-radius: 4px;
+    border-radius: 0.04rem;
     border: none;
     color: @white;
-    padding: 8px 0;
+    padding: 0.08rem 0;
     text-align: center;
-    font-size: 28px;
-    word-spacing: 20px;
+    font-size: 0.28rem;
+    word-spacing: 0.2rem;
     font-weight: 500;
   }
 
@@ -257,35 +255,35 @@
   }
 
   input {
-    height: 28px;
-    padding-left: 10px;
+    height: 0.28rem;
+    padding-left: 0.1rem;
     border: 1px solid @border;
-    border-radius: 4px;
+    border-radius: 0.04rem;
   }
 
   .info-button,
   .info-button:focus {
     background: @grayLight;
-    border-radius: 4px;
+    border-radius: 0.04rem;
     color: @blackLight;
   }
 
   .info-button:hover {
     background: @grayDark;
-    border-radius: 4px;
+    border-radius: 0.04rem;
     color: @blackLight;
   }
 
   .info-button:active {
     background: @grayDark;
-    border-radius: 4px;
+    border-radius: 0.04rem;
     color: @blackLight;
   }
 
   .hint {
     position: absolute;
-    margin-top: 10px;
-    right: 47px;
+    margin-top: 0.1rem;
+    right: 0.47rem;
   }
 
   .select_wallet .ivu-select-dropdown {
@@ -298,8 +296,8 @@
   }
 
   .auto-complete-sub-container {
-    max-height: 400px;
-    padding: 0 20px;
+    max-height: 1.86rem;
+    padding: 0 0.2rem;
 
     .ivu-select-item:hover {
       background-color: @purple  !important;
@@ -326,7 +324,7 @@
   .tips-in-sub-container {
     font-size: @smallerFont;
     color: @border;
-    padding: 10px 0;
+    padding: 0.1rem 0;
   }
 }
 
